<resources>
    <string name="app_name">StackOverflow</string>
    <string name="introduction">Welcome to the StackOverflow app! Please type in what you\'re looking for.</string>
    <string name="search_placeholder">Search...</string>
    <string name="search_button">Search</string>
    <string name="no_data_available">No results found.</string>
    <string name="results_help">Click a Result to open...</string>
    <string name="history_help">Click Search Term to Rerun Search</string>
    <string name="history_delete">Swipe item to delete</string>
    <string name="mainaboutus">About Us</string>
    <string name="imagename">Hodaya Nir</string>
    <string name="image1_age">age: 26</string>
    <string name="image1_profession">Profession: Citrix System Administrator</string>
    <string name="image1_hobbies">Hobbies: dancing, reading, meetings with friends</string>
    <string name="image2_name">Itamar Glick</string>
    <string name="image2_age">Age: 45</string>
    <string name="image2_hobbies">Hobbies: watching movies, computers</string>
    <string name="image3_Name">Amit Markus</string>
    <string name="image3_age">Age: 25</string>
    <string name="image3_profession">Profession: Cyber systems Implementor</string>
    <string name="image3_hobbies">Hobbies: photography</string>
    <string name="image4_name">Lior Blobstein</string>
    <string name="image4_age">Age: 27</string>
    <string name="image4_profession">Profession: Software Engineer</string>
    <string name="image4_hobbies">Hobbies: beer, netflix, zoom meetings</string>
    <string name="empty" translatable="false"/>
    <string name="home">Home</string>
    <string name="history_ac">History</string>
    <string name="about_ac">About</string>
    <string name="aboutStack">About StackOverflow</string>
    <string name="delete_notification">Item was removed from the list.</string>
    <string name="undo_btn">Undo</string>

</resources>
